# bevy

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
assets/models/scene/: scene.blend  scene.blend1  scene.glb  scene.gltf  scene_dependency.gltf
assets/scenes/: load_scene_example.scn.ron
assets/shaders/: custom.wgsl
crates/bevy/: Cargo.toml
crates/bevy_animation/src/: lib.rs
crates/bevy_app/src/: app.rs  app_builder.rs  event.rs  lib.rs  schedule_runner.rs
crates/bevy_asset/: Cargo.toml  README.md  notes.md
crates/bevy_asset/assets/: a.cool.ron  c.cool.ron
crates/bevy_asset/examples/: loader.rs
crates/bevy_asset/macros/src/: lib.rs
crates/bevy_asset/src/: adapter.rs  asset_server.rs  assets.rs  event.rs  folder.rs  handle.rs  id.rs  info.rs  io.rs  lib.rs  loader.rs  meta.rs  path.rs  processor.rs  reflect.rs  saver.rs  serializer.rs  server.rs
crates/bevy_asset/src/diagnostic/: asset_count_diagnostics_plugin.rs
crates/bevy_asset/src/io/: file.rs  gated.rs  memory.rs  mod.rs  processor_gated.rs
crates/bevy_asset/src/processor/: mod.rs  process_plan.rs
crates/bevy_asset/src/server/: info.rs  mod.rs
crates/bevy_audio/src/: audio.rs  audio_output.rs  audio_source.rs  lib.rs  sinks.rs
crates/bevy_core/src/: label.rs  lib.rs  task_pool_options.rs
crates/bevy_derive/src/: lib.rs  type_uuid.rs
crates/bevy_diagnostic/src/: entity_count_diagnostics_plugin.rs  frame_time_diagnostics_plugin.rs  lib.rs  log_diagnostics_plugin.rs
crates/bevy_dylib/: Cargo.toml
crates/bevy_dylib/src/: lib.rs
crates/bevy_dynamic_plugin/src/: loader.rs
crates/bevy_ecs/: Cargo.toml  bench_results.txt  old_impl_bench_results.txt  todo.md
crates/bevy_ecs/benches/: system_stage.rs
crates/bevy_ecs/src/: archetype.rs  bundle.rs  lib.rs
crates/bevy_ecs2/: Cargo.toml  component_storage.md
crates/bevy_ecs2/macros/: Cargo.toml
crates/bevy_ecs2/src/: lib.rs
crates/bevy_ecs3/: Cargo.toml  todo.md
crates/bevy_ecs3/benches/: system_stage.rs
crates/bevy_ecs3/macros/: Cargo.toml
crates/bevy_ecs3/macros/src/: lib.rs
crates/bevy_ecs3/src/: lib.rs
crates/bevy_ecs3/src/core/: archetype.rs  bundle.rs  component.rs  entity.rs  entity_ref.rs  filter.rs  mod.rs  pointer.rs  query.rs  sparse_set.rs  table.rs  type_info.rs  world.rs
crates/bevy_ecs3/src/core/entity/: entity_ref.rs  mod.rs
crates/bevy_ecs3/src/core/query/: access.rs  fetch.rs  filter.rs  iter.rs  mod.rs  state.rs
crates/bevy_ecs3/src/core/storage/: blob_vec.rs  mod.rs  sparse_set.rs  table.rs
crates/bevy_ecs3/src/schedule/: executor_parallel.rs  mod.rs  stage.rs  state.rs  system_container.rs  system_descriptor.rs  system_set.rs
crates/bevy_ecs3/src/system/: commands.rs  into_system.rs  into_thread_local.rs  mod.rs  query.rs  system.rs  system_chaining.rs  system_param.rs
crates/bevy_ecs3/src/system/query/: mod.rs  query_set.rs  state.rs
crates/bevy_gilrs/src/: gilrs_system.rs  lib.rs
crates/bevy_gizmos/src/: lib.rs  pipeline_2d.rs  pipeline_3d.rs
crates/bevy_gltf/: Cargo.toml
crates/bevy_gltf/src/: lib.rs  loader.rs
crates/bevy_input/src/: keyboard.rs  lib.rs
crates/bevy_internal/: Cargo.toml
crates/bevy_internal/src/: default_plugins.rs  lib.rs
crates/bevy_log/src/: lib.rs
crates/bevy_pbr/src/: bundle.rs  entity.rs  lib.rs  light.rs  material.rs  pbr_material.rs  wireframe.rs
crates/bevy_render/: Cargo.toml
crates/bevy_render/src/: color.rs  draw.rs  entity.rs  lib.rs  pipelined_rendering.rs  (+1 more)
crates/bevy_sprite/: Cargo.toml
crates/bevy_transform/: Cargo.toml
crates/bevy_wgpu/: Cargo.toml
crates/bevy_winit/: Cargo.toml
crates/crevice/: Cargo.toml
examples/: hello_world.rs
examples/2d/: contributors.rs  many_sprites.rs  mesh2d_manual.rs  pipelined_sprite.rs  sprite.rs  sprite_sheet.rs  text2d.rs  texture_atlas.rs
examples/3d/: 3d_scene.rs  3d_scene_pipelined.rs  lines.rs  load_gltf.rs  load_model.rs  many_cubes_pipelined.rs  msaa.rs  parenting.rs  pbr.rs  skybox.rs  spawner.rs  texture.rs  tonemapping.rs  z_sort_debug.rs
examples/app/: drag_and_drop.rs  empty.rs  empty_defaults.rs  headless.rs  plugin.rs  plugin_group.rs  return_after_run.rs  thread_pool_resources.rs
examples/asset/: asset_importing.rs  asset_loading.rs  custom_asset.rs  custom_asset_io.rs  custom_asset_loading.rs  custom_asset_reader.rs  hot_asset_reloading.rs
examples/audio/: audio.rs  audio_control.rs  decodable.rs  spatial_audio_2d.rs  spatial_audio_3d.rs
examples/diagnostics/: custom_diagnostic.rs  print_diagnostics.rs
examples/ecs/: ecs_guide.rs  event.rs  fixed_timestep.rs  hierarchy.rs  observers.rs  parallel_query.rs  removal_detection.rs  startup_system.rs  state.rs  system_param.rs
examples/game/: alien_cake_addict.rs  breakout.rs
examples/games/: alien_cake_addict.rs
examples/input/: char_input_events.rs  gamepad_input.rs  gamepad_input_events.rs  keyboard_input.rs  keyboard_input_events.rs  keyboard_modifiers.rs  mouse_input.rs  mouse_input_events.rs  touch_input.rs  touch_input_events.rs
examples/ios/: Cargo.toml
examples/reflection/: generic_reflection.rs  reflection.rs  reflection_types.rs  trait_reflection.rs
examples/scene/: properties.rs  scene.rs
examples/shader/: animate_shader.rs  array_texture.rs  compute_shader_game_of_life.rs  custom_shader_pipelined.rs  custom_vertex_attribute.rs  mesh_custom_attribute.rs  shader_custom_material.rs  shader_defs.rs  shader_instancing.rs  shader_material.rs  shader_material_glsl.rs  shader_material_screenspace_texture.rs  shader_prepass.rs  texture_binding_array.rs
examples/tools/: bevymark.rs  bevymark_pipelined.rs
examples/ui/: button.rs  font_atlas_debug.rs  text.rs  ui.rs
examples/wasm/: assets_wasm.rs  index.html
examples/window/: clear_color.rs  multiple_windows.rs  window_settings.rs
pipelined/: changes.md
pipelined/bevy_core_pipeline/: Cargo.toml
pipelined/bevy_gltf2/: Cargo.toml
pipelined/bevy_pbr2/: Cargo.toml
pipelined/bevy_render2/: Cargo.toml
pipelined/bevy_sprite2/: Cargo.toml
pipelined/bevy_wgpu2/: Cargo.toml
pipelined/bevy_winit2/: Cargo.toml
src/: lib.rs
(+293 files in other folders)
