[package]
name = "bevy_examples"
version = "0.3.0"
edition = "2018"
authors = [
    "Bevy Contributors <bevyengine@gmail.com>",
    "Carter Anderson <mcanders1@gmail.com>",
]
description = "Examples for the Bevy game engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT"
keywords = ["game", "engine", "gamedev", "graphics", "bevy"]
categories = ["game-engines", "graphics", "gui", "rendering"]
exclude = ["assets/**/*", "tools/**/*", ".github/**/*", "crates/**/*"]

[workspace]
members = ["crates/*", "crates/bevy_ecs/hecs", "examples/ios"]
exclude = ["benches"]

[dev-dependencies]
bevy = { path = "crates/bevy", version = "0.3.0" }
bevy_dylib = { path = "crates/bevy_dylib", version = "0.3.0" }
rand = "0.7.3"
serde = { version = "1", features = ["derive"] }
log = "0.4"
ron = "0.6"
anyhow = "1.0"

# bevy (Android)
[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = { version = "0.2", features = ["logger"] }
android_logger = "0.9"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_error_panic_hook = "0.1.6"
console_log = { version = "0.2", features = ["color"] }

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[[example]]
name = "sprite"
path = "examples/2d/sprite.rs"

[[example]]
name = "sprite_sheet"
path = "examples/2d/sprite_sheet.rs"

[[example]]
name = "texture_atlas"
path = "examples/2d/texture_atlas.rs"

[[example]]
name = "load_gltf"
path = "examples/3d/load_gltf.rs"

[[example]]
name = "msaa"
path = "examples/3d/msaa.rs"

[[example]]
name = "parenting"
path = "examples/3d/parenting.rs"

[[example]]
name = "3d_scene"
path = "examples/3d/3d_scene.rs"

[[example]]
name = "spawner"
path = "examples/3d/spawner.rs"

[[example]]
name = "texture"
path = "examples/3d/texture.rs"

[[example]]
name = "z_sort_debug"
path = "examples/3d/z_sort_debug.rs"

[[example]]
name = "empty_defaults"
path = "examples/app/empty_defaults.rs"

[[example]]
name = "empty"
path = "examples/app/empty.rs"

[[example]]
name = "headless"
path = "examples/app/headless.rs"

[[example]]
name = "plugin"
path = "examples/app/plugin.rs"

[[example]]
name = "plugin_group"
path = "examples/app/plugin_group.rs"

[[example]]
name = "return_after_run"
path = "examples/app/return_after_run.rs"

[[example]]
name = "thread_pool_resources"
path = "examples/app/thread_pool_resources.rs"

[[example]]
name = "hot_asset_reloading"
path = "examples/asset/hot_asset_reloading.rs"

[[example]]
name = "asset_loading"
path = "examples/asset/asset_loading.rs"

[[example]]
name = "custom_asset"
path = "examples/asset/custom_asset.rs"

[[example]]
name = "audio"
path = "examples/audio/audio.rs"

[[example]]
name = "custom_diagnostic"
path = "examples/diagnostics/custom_diagnostic.rs"

[[example]]
name = "print_diagnostics"
path = "examples/diagnostics/print_diagnostics.rs"

[[example]]
name = "event"
path = "examples/ecs/event.rs"

[[example]]
name = "startup_system"
path = "examples/ecs/startup_system.rs"

[[example]]
name = "ecs_guide"
path = "examples/ecs/ecs_guide.rs"

[[example]]
name = "parallel_query"
path = "examples/ecs/parallel_query.rs"

[[example]]
name = "hierarchy"
path = "examples/ecs/hierarchy.rs"

[[example]]
name = "breakout"
path = "examples/game/breakout.rs"

[[example]]
name = "mouse_input"
path = "examples/input/mouse_input.rs"

[[example]]
name = "mouse_input_events"
path = "examples/input/mouse_input_events.rs"

[[example]]
name = "keyboard_input"
path = "examples/input/keyboard_input.rs"

[[example]]
name = "keyboard_input_events"
path = "examples/input/keyboard_input_events.rs"

[[example]]
name = "gamepad_input"
path = "examples/input/gamepad_input.rs"

[[example]]
name = "gamepad_input_events"
path = "examples/input/gamepad_input_events.rs"

[[example]]
name = "touch_input"
path = "examples/input/touch_input.rs"

[[example]]
name = "touch_input_events"
path = "examples/input/touch_input_events.rs"

[[example]]
name = "scene"
path = "examples/scene/scene.rs"

[[example]]
name = "properties"
path = "examples/scene/properties.rs"

[[example]]
name = "mesh_custom_attribute"
path = "examples/shader/mesh_custom_attribute.rs"

[[example]]
name = "shader_custom_material"
path = "examples/shader/shader_custom_material.rs"

[[example]]
name = "shader_defs"
path = "examples/shader/shader_defs.rs"

[[example]]
name = "button"
path = "examples/ui/button.rs"

[[example]]
name = "text"
path = "examples/ui/text.rs"

[[example]]
name = "font_atlas_debug"
path = "examples/ui/font_atlas_debug.rs"

[[example]]
name = "ui"
path = "examples/ui/ui.rs"

[[example]]
name = "clear_color"
path = "examples/window/clear_color.rs"

[[example]]
name = "multiple_windows"
path = "examples/window/multiple_windows.rs"

[[example]]
name = "window_settings"
path = "examples/window/window_settings.rs"

[[example]]
name = "hello_wasm"
path = "examples/wasm/hello_wasm.rs"
required-features = []

[[example]]
name = "headless_wasm"
path = "examples/wasm/headless_wasm.rs"
required-features = []

[[example]]
name = "winit_wasm"
path = "examples/wasm/winit_wasm.rs"
required-features = ["bevy/bevy_winit"]

[[example]]
name = "assets_wasm"
path = "examples/wasm/assets_wasm.rs"
required-features = ["bevy/bevy_winit"]

[[example]]
name = "android"
path = "examples/android/android.rs"
crate-type = ["cdylib"]

[package.metadata.android]
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]
target_sdk_version = 29
min_sdk_version = 16
