[package]
name = "bevy_asset"
version = "0.11.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = { path = "../bevy_app", version = "0.11.0-dev" }
bevy_ecs = { path = "../bevy_ecs", version = "0.11.0-dev" }
bevy_log = { path = "../bevy_log", version = "0.11.0-dev" }
bevy_reflect = { path = "../bevy_reflect", version = "0.11.0-dev" }
bevy_tasks = { path = "../bevy_tasks", version = "0.11.0-dev" }
bevy_utils = { path = "../bevy_utils", version = "0.11.0-dev" }

serde = { version = "1", features = ["derive"] }
parking_lot = "0.12"
crossbeam-channel = "0.5"
downcast-rs = "1.2"
thiserror = "1.0"
anyhow = "1.0"
futures-io = "0.3"
futures-lite = "1.12"
async-fs = "1.5"
async-broadcast = "0.5"
async-lock = "2.7"
ron = "0.8"
md5 = "0.7"

[dev-dependencies]
bevy_core = {path = "../bevy_core", version = "0.11.0-dev"}