[package]
name = "bevy_ecs3"
version = "0.4.0"
edition = "2018"
authors = [
    "Bevy Contributors <bevyengine@gmail.com>",
    "Carter Anderson <mcanders1@gmail.com>",
]
description = "Bevy Engine's entity component system"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT"
keywords = ["ecs", "game", "bevy"]
categories = ["game-engines", "data-structures"]

[dependencies]
bevy_utils = { path = "../bevy_utils", version = "0.4.0" }

bitflags = "1.2.1"
fixedbitset = "0.3.1"
fxhash = "0.2"
thiserror = "1.0"