[package]
name = "bevy_ecs3"
version = "0.4.0"
edition = "2018"
authors = [
    "Bevy Contributors <bevyengine@gmail.com>",
    "Carter Anderson <mcanders1@gmail.com>",
]
description = "Bevy Engine's entity component system"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT"
keywords = ["ecs", "game", "bevy"]
categories = ["game-engines", "data-structures"]

[dependencies]
bevy_tasks = { path = "../bevy_tasks", version = "0.4.0" }
bevy_utils = { path = "../bevy_utils", version = "0.4.0" }
bevy_ecs3_macros = { path = "macros", version = "0.4.0" }

async-channel = "1.4"
bitflags = "1.2"
fixedbitset = "0.3"
fxhash = "0.2"
thiserror = "1.0"
downcast-rs = "1.2"
parking_lot = "0.11"
rand = "0.7"